--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="auth-box">
-            <h1>Todo App</h1>
+            <h1>todo-test-task</h1>
 
             <div class="tabs">
                 <button class="tab-btn active" onclick="openTab('login')">Вход</button>
